# VanguardEngine-ThirdParty

./: .gitmodules  CMakeLists.txt  README.md
Box2D/: CMakeLists.txt
FreeType/: CMakeLists.txt
Gainput/: CMakeLists.txt
GoogleTest/: CMakeLists.txt
Juce/: AppConfig.h  CMakeLists.txt
Juce/juce_core/: juce_core.cpp  juce_core.h
LibPNG/: CMakeLists.txt
LibPNG/lpng1625/: CMakeLists.txt
LibSass/: CMakeLists.txt
MoodyCamel/: CMakeLists.txt
OGRE/: CMakeLists.txt
OGRE/Dependencies/: .hg_archival.txt
OGRE/Source/: .hg_archival.txt  CMakeLists.txt
Qt/: CMakeLists.txt
Qt/5.7/gcc_64/lib/: libQt5Core.la  libQt5DBus.la  libQt5Gui.la  libQt5Nfc.la  libQt5Nfc.prl  libQt5PacketProtocol.la  libQt5PacketProtocol.prl  libQt5PlatformSupport.la  libQt5Svg.la  libQt5Svg.prl  libQt5Widgets.la  libQt5X11Extras.la  libQt5X11Extras.prl  libQt5XcbQpa.la  libqgsttools_p.prl
Qt/5.7/gcc_64/lib/pkgconfig/: Qt53DCore.pc  Qt53DExtras.pc  Qt53DInput.pc  Qt53DLogic.pc  Qt53DQuick.pc  Qt53DQuickExtras.pc  Qt53DQuickInput.pc  Qt53DQuickRender.pc  Qt53DRender.pc  Qt5Bluetooth.pc  Qt5Concurrent.pc  Qt5Core.pc  Qt5DBus.pc  Qt5Designer.pc  Qt5Gui.pc  Qt5Help.pc  Qt5Location.pc  Qt5Multimedia.pc  Qt5MultimediaWidgets.pc  Qt5Network.pc  Qt5Nfc.pc  Qt5OpenGL.pc  Qt5OpenGLExtensions.pc  Qt5Positioning.pc  Qt5PrintSupport.pc  Qt5Qml.pc  Qt5Quick.pc  Qt5QuickControls2.pc  Qt5QuickTest.pc  Qt5QuickWidgets.pc  Qt5Sensors.pc  Qt5SerialPort.pc  Qt5Sql.pc  Qt5Svg.pc  Qt5Test.pc  Qt5UiTools.pc  Qt5WebChannel.pc  Qt5WebSockets.pc  Qt5WebView.pc  Qt5Widgets.pc  (+3 more)
Qt/5.7/msvc2015_64/lib/cmake/Qt5Widgets/: Qt5Widgets - Shortcut.lnk
SDL/: CMakeLists.txt
SDL/SDL2-2.0.4/: CMakeLists.txt
SDL2TTF/: CMakeLists.txt
SDLImage/: CMakeLists.txt
ZLib/: CMakeLists.txt
ZLib/zlib-1.2.8/: CMakeLists.txt
