# Set OGRE dependencies folder.
GET_FILENAME_COMPONENT(dependencyAbsolute "Dependencies" ABSOLUTE)
#set(ENV{OGRE_DEPENDENCIES_DIR} ${dependencyAbsolute})

GET_FILENAME_COMPONENT(sourceAbsolute "${CMAKE_CURRENT_SOURCE_DIR}/Source" ABSOLUTE)

# Run default OGRE CmakeLists.txt
add_subdirectory (${dependencyAbsolute})
add_subdirectory (${sourceAbsolute})

# Put all projects in the proper folder
PUT_IN_FOLDER_RELATIVE_ROOT("FreeImage" "${CMAKE_CURRENT_SOURCE_DIR}/OGRE")
PUT_IN_FOLDER_RELATIVE_ROOT("freetype" "${CMAKE_CURRENT_SOURCE_DIR}/OGRE")
PUT_IN_FOLDER_RELATIVE_ROOT("OIS" "${CMAKE_CURRENT_SOURCE_DIR}/OGRE")
PUT_IN_FOLDER_RELATIVE_ROOT("zlib" "${CMAKE_CURRENT_SOURCE_DIR}/OGRE")
PUT_IN_FOLDER_RELATIVE_ROOT("zziplib" "${CMAKE_CURRENT_SOURCE_DIR}/OGRE")

PUT_IN_FOLDER_RELATIVE_ROOT("OgreMain" "${CMAKE_CURRENT_SOURCE_DIR}/OGRE")
PUT_IN_FOLDER_RELATIVE_ROOT("OgreMeshLodGenerator" "${CMAKE_CURRENT_SOURCE_DIR}/OGRE")
PUT_IN_FOLDER_RELATIVE_ROOT("OgreMeshUpgrader" "${CMAKE_CURRENT_SOURCE_DIR}/OGRE")
PUT_IN_FOLDER_RELATIVE_ROOT("OgreOverlay" "${CMAKE_CURRENT_SOURCE_DIR}/OGRE")
PUT_IN_FOLDER_RELATIVE_ROOT("OgrePaging" "${CMAKE_CURRENT_SOURCE_DIR}/OGRE")
PUT_IN_FOLDER_RELATIVE_ROOT("OgreRTShaderSystem" "${CMAKE_CURRENT_SOURCE_DIR}/OGRE")
PUT_IN_FOLDER_RELATIVE_ROOT("OgreTerrain" "${CMAKE_CURRENT_SOURCE_DIR}/OGRE")
PUT_IN_FOLDER_RELATIVE_ROOT("OgreVolume" "${CMAKE_CURRENT_SOURCE_DIR}/OGRE")
PUT_IN_FOLDER_RELATIVE_ROOT("OgreXMLConverter" "${CMAKE_CURRENT_SOURCE_DIR}/OGRE")

PUT_IN_FOLDER_RELATIVE_ROOT("Plugin_BSPSceneManager" "${CMAKE_CURRENT_SOURCE_DIR}/OGRE")
PUT_IN_FOLDER_RELATIVE_ROOT("Plugin_CgProgramManager" "${CMAKE_CURRENT_SOURCE_DIR}/OGRE")
PUT_IN_FOLDER_RELATIVE_ROOT("Plugin_OctreeSceneManager" "${CMAKE_CURRENT_SOURCE_DIR}/OGRE")
PUT_IN_FOLDER_RELATIVE_ROOT("Plugin_OctreeZone" "${CMAKE_CURRENT_SOURCE_DIR}/OGRE")
PUT_IN_FOLDER_RELATIVE_ROOT("Plugin_ParticleFX" "${CMAKE_CURRENT_SOURCE_DIR}/OGRE")
PUT_IN_FOLDER_RELATIVE_ROOT("Plugin_PCZSceneManager" "${CMAKE_CURRENT_SOURCE_DIR}/OGRE")

PUT_IN_FOLDER_RELATIVE_ROOT("RenderSystem_Direct3D11" "${CMAKE_CURRENT_SOURCE_DIR}/OGRE")
PUT_IN_FOLDER_RELATIVE_ROOT("RenderSystem_Direct3D9" "${CMAKE_CURRENT_SOURCE_DIR}/OGRE")
PUT_IN_FOLDER_RELATIVE_ROOT("RenderSystem_GL" "${CMAKE_CURRENT_SOURCE_DIR}/OGRE")
